# GameBoy_Emulator

./: .gitignore  CMakeLists.txt  CPU.py  OpcodeParser.py  README.md  hexReader.py  notes
.github/workflows/: msbuild.yml
Gameboy/: COMPARE.cpp  CPU.cpp  CPU.h  DECREASE.cpp  DisassemblyView.cpp  DisassemblyView.h  DisplayUnit.cpp  DisplayUnit.h  Gameboy.sln  Gameboy.vcxproj  Gameboy.vcxproj.filters  JUMP.cpp  LOAD.cpp  MemoryUnit.cpp  MemoryUnit.h  UNKNOWN.cpp  main.cpp
Old_Implementations/: CMakeLists.txt
Old_Implementations/docs/: Status.xlsx
Old_Implementations/include/: INS_decrease.h  cpu.h  display.h  memory.h
Old_Implementations/roms/: Tetris.dump
Old_Implementations/roms/Analyze/: Tetris_1.dump  Tetris_2.dump
Old_Implementations/roms/IO/: IO_Constant.dump  IO_Constant.hex
Old_Implementations/roms/tempDump/: temp.txt
Old_Implementations/src/: INS_decrease.cpp  INS_jump.cpp  cpu.cpp  display.cpp  main.cpp  memory.cpp
include/: INS_jump.h  INS_load.h  memory.h
python/: CPU.py  MemoryRegions.py
roms/: IO.dump
roms/VRAM_TEST_DATA/: OAM_1.dump  OAM_1_2.dump  VRAM_1.dump
src/: INS_decrease.cpp  INS_load.c  INS_load.cpp  cpu.c  cpu.cpp  main.c  main.cpp  memory.c  memory.cpp
